name:                memcached-binary
version:             0.1.0
synopsis:            memcached client using binary protocol.
license:             MIT
license-file:        LICENSE
author:              Hirotomo Moriwaki
maintainer:          philopon.dependence@gmail.com
copyright:           (c) 2014 Hirotomo Moriwaki
category:            Database
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Database.Memcached.Binary
                       Database.Memcached.Binary.Exception
                       Database.Memcached.Binary.Types
                       Database.Memcached.Binary.Internal
                       Database.Memcached.Binary.Internal.Definition
  build-depends:       base                 >=4.6  && <4.8
                     , bytestring           >=0.10 && <0.11
                     , network              >=2.6  && <2.7
                     , storable-endian      >=0.2  && <0.3
                     , data-default-class   >=0.0  && <0.1
                     , resource-pool        >=0.2  && <0.3
                     , containers           >=0.5  && <0.6
                     , unordered-containers >=0.2  && <0.3
                     , time                 >=1.4  && <1.5
  ghc-options:         -Wall -O2
  hs-source-dirs:      src
  default-language:    Haskell2010
